# atmospheric-gas-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
config/: config.json
docs/: architecture.md  data_format.md  installation.md  user_guide.md
installer/: PRL.spec  build.py  windows_setup.iss
scripts/: generate_synthetic_data.py  run_app.sh  run_pipeline.sh  test_new_pipeline.py
src/prl/: __init__.py
src/prl/app/: dashboard_controller.py  data_access.py  main.py  main_window.py  styles.py  update_checker.py  view_models.py  windowing.py
src/prl/app/widgets/: __init__.py  dark.qss  date_range_picker.py  filters_panel.py  import_dialog.py  light.qss  metrics_table.py  plot_section.py  range_slider.py  sidebar.py  top_bar.py
src/prl/app/workers/: dashboard_worker.py  import_worker.py
src/prl/core/: __init__.py  constants.py  io_utils.py  monitoring.py
src/prl/core/correlation/: __init__.py  pipeline_summary.py  service.py
src/prl/core/ingest/: service.py
src/prl/core/metrics/: __init__.py  dashboard_metrics.py  pipeline_metrics.py
src/prl/core/plotting/: __init__.py  chart_builder.py  mpl_dashboard.py  static_export.py
src/prl/core/preprocess/: service.py
src/prl/core/services/: __init__.py  dashboard_service.py  import_service.py  pipeline_service.py
src/prl/core/storage/: catalog.py  database.py
src/prl/infrastructure/: __init__.py  database_engine.py  runtime_paths.py
src/prl/pipeline/: cli.py
tests/: README.md  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_metrics.py
(+1 files in other folders)
