[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prl-dashboard"
version = "2.0.0"
description = "CRDS gas analysis and visualization platform for PRL scientists"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6,<7.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "pyarrow>=15,<20",
    "duckdb>=0.9.0",
    "plotly>=5.24,<7.0",
    "matplotlib>=3.8,<4.0",
    "pyqtgraph>=0.13.7,<1.0",
]

[project.scripts]
prl-app      = "prl.app.main:main"
prl-pipeline = "prl.pipeline.cli:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"prl.app.widgets" = ["*.qss", "assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
